Fixed the alignment

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -452,10 +452,10 @@ body {
   transition: all 0.3s ease;
   z-index: 2;
 }
+
 .table-container {
   border-radius: 0 !important;
   box-shadow: none !important;
-  /* border-bottom: 1px solid #3276b1; */
 }
 
 .title-row {
@@ -493,35 +493,6 @@ body {
   color: #61dafb;
 }
 
-/* .loader {
-  transform: rotateZ(45deg);
-  perspective: 1000px;
-  border-radius: 55%;
-  width: 48px;
-  height: 48px;
-  color: #7276b1;
-  position: absolute;
-  left: 50%;
-  margin-top: 50px;
-}
-.loader:before,
-.loader:after {
-  content: "";
-  display: block;
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: inherit;
-  height: inherit;
-  border-radius: 50%;
-  transform: rotateX(70deg);
-  animation: 1s spin linear infinite;
-}
-.loader:after {
-  color: #70154c;
-  transform: rotateY(70deg);
-  animation-delay: 0.4s;
-} */
 @keyframes rotate {
   0% {
     transform: translate(-50%, -50%) rotateZ(0deg);
